--- a/databases-basics/1.database.md
+++ b/databases-basics/1.database.md
@@ -6,7 +6,7 @@
 
     `Browser ------->  Backend ---------> Database`
 
-   - user hits the backends (there can be mutliple)
+   - user hits the backends (there can be multiple)
    - backend hits the database
    - user can't directly access database
 
@@ -19,7 +19,7 @@
    - Using Libraries
    - Like below libraries: 
      - `Express` lets you create HTTP servers
-     - `jsonwebtokens` lets you create JWT signed tokens
+     - `jsonwebtoken` lets you create JWT signed tokens
      - `Mongoose` lets you connect to your database
 
 5. We'll first do mongoose connection test example. 
