Databases and MongoDB concepts added

--- a/databases-basics/1.database.md
+++ b/databases-basics/1.database.md
@@ -22,11 +22,41 @@
      - `jsonwebtoken` lets you create JWT signed tokens
      - `Mongoose` lets you connect to your database
 
-5. We'll first do mongoose connection test example. 
+5. Few Questions:
+   - Q: Why don't users directly hits Database?
+     - Databases were created using protocols which browsers doesn't understand
 
-6. In next file `3.mongoConnect.js` we'll do the following:
-     - Connect to mongo db using `mongoose` library
-     - We'll have 3 routes: `/signup`, `/signin`, `/users`
-       - `/signup`: user will send `email`, `password`, `name`  in body and we'll put it in DB provided same user email doesn't exists
-       - `/signin`: we'll check if user exits in db or not with correct password, if it does => return JWT signed token.
-       - `/users`: user sends header with his jwt token, we'll return all the users present in db (except the logged in user itself)
+      - Databases doesn't have Granular access (ability to access something user or group based) which makes DBs safe and persistent.
+      - `firebase` is exception, it provides **fine grain** access to users without the need of http server => users can directly access certain resources after validation checks they are belongs to those certain user or groups who have provided with the access of those certain resources.
+   - Q: What extra does HTTP server provides?
+       - They provides security and authentication facility
+
+## Databases
+
+- What are **Databases?**
+   - They usually allows 4 important operations in efficient manner
+   - **CRUD** (**C**reate, **R**ead, **U**pdate, **D**elete)
+   - We'll learn using `mongoose` library to talk to `mongodb`
+   - Eventually we'll use `prisma`, which is **ORM** used to talk to databases.
+   - Cluster > Database > Tables
+   - Cluster is made up of multiple databases, databases are made up of multiple tables
+
+- **MongoDB & mongoose library** 
+  - mongoDB is schemaless, can put any data without worrying about the structure of data.
+  - In mongoose, 1st we **have to define schema**.
+  - what is **schema**? schema is structure of data we are gonna put in DB.
+  - So, mongoose taking perks of mongodb away? kinda yes but putting schemaless data in DB is very dangerous and mongoose prevents that.
+  - It doesn't mean we can't put schemaless data in mongodb we still can, but mongoose provides benefits like:
+    - Auto Completions
+    - Validation data before it goes to DB
+    - Making sure to use schemas to make mongoDB less dangerous
+  - Similar to `JavaScript` & `TypeScript` as TS provides more **type safety** on top of JS.
+  - mongoDb let us put **nested complex objects** in DB, which **SQL DBs doesn't**. => easy is establish relationships between data.
+  - We'll first do mongoose connection test example. refer file: `2.mongooseConnect.js`
+  - Then we'll do the following:
+       - Connect to mongoDB using `mongoose` library.
+       - Define data schema for mongoose.
+       - We'll have 3 routes: `/signup`, `/signin`, `/users`
+         1. `/signup`: user will send `email`, `password`, `name`  in body and we'll put it in DB provided same user email doesn't exists
+         2. `/signin`: we'll check if user exits in db or not with correct password, if it does => return JWT signed token.
+         3. `/users`: user sends header with his jwt token, we'll return all the users present in db (except the logged in user itself)
