Databases and MongoDB concepts added

--- a/databases-basics/1.database.md
+++ b/databases-basics/1.database.md
@@ -53,9 +53,8 @@
   - Similar to `JavaScript` & `TypeScript` as TS provides more **type safety** on top of JS.
   - mongoDb let us put **nested complex objects** in DB, which **SQL DBs doesn't**. => easy is establish relationships between data.
   - We'll first do mongoose connection test example. refer file: `2.mongooseConnect.js`
-  - Then we'll do the following:
+  - MongoDb with Authentication, refer file `3.mongoDBwithAuthentication.js`
        - Connect to mongoDB using `mongoose` library.
-       - Define data schema for mongoose.
        - We'll have 3 routes: `/signup`, `/signin`, `/users`
          1. `/signup`: user will send `email`, `password`, `name`  in body and we'll put it in DB provided same user email doesn't exists
          2. `/signin`: we'll check if user exits in db or not with correct password, if it does => return JWT signed token.
