--- a/authentication-concepts/03.authenticationPrereqs.md
+++ b/authentication-concepts/03.authenticationPrereqs.md
@@ -1,15 +1,15 @@
 ### Few Cryptography things:
 
-1. Hashing (converting simple text to some random gibrish)
+1. Hashing (converting simple text to some random gibberish)
    
-    - When we signup our password doesn't get direclly stored in DB, first it gets hashed and corresponding hashed password gets stored in DB
-    - so, when next time user sends any subsequest request again, that hash gets compared with stored hashed password
+    - When we signup our password doesn't get directly stored in DB, first it gets hashed and corresponding hashed password gets stored in DB
+    - so, when next time user sends any subsequent request again, that hash gets compared with stored hashed password
     - Hashing is uni directional, given the output, no one can find the input
     - change input a little bit changes the output hash a lot
 
 2. Encryption
-    - 2 way, needs password or key to enrypt and decrypt
-    - string is encypted using password and then can be decrypted using the same password
+    - 2 way, needs password or key to encrypt and decrypt
+    - string is encrypt using password and then can be decrypted using the same password
 
 
 3. **JSON Web Tokens (JWT)**
@@ -30,7 +30,7 @@
 
       Encryption:
       ```
-       Any data -> encrytion -> encrypted data
+       Any data -> encryption -> encrypted data
       (can only be decoded by who have key or password)
        ```
 
@@ -45,13 +45,13 @@
       SO...
        - JWT is neither hashing or encryption (it's technically a digital signature)
        - Anyone can see the og output given the signature
-       - signature can be veryfied only using password
+       - signature can be verified only using password
 
 4. Local Storage:
 
      - A place in your browser when you can store some data
-     - usual stored data is: Authetication tokens, User Language preferences, User Theme preferences
-     - In broswer
+     - usual stored data is: Authentication tokens, User Language preferences, User Theme preferences
+     - In browser
           ```
           inspect -> Application -> local storage
           ````
@@ -60,6 +60,6 @@
 ### How does Authentication works?
 #### High level answer
 1. When initially user do signin, username and password goes to backend logic
-2. password gets hashed using some hashing logic and that hashed password gets stored in DB and checks gets perfomed whether user exists or not
+2. password gets hashed using some hashing logic and that hashed password gets stored in DB and checks gets performed whether user exists or not
 3. if user exists backend returns JWT to local storage
 4. Next time whenever user again sends request then instead of again taking username and password, backend use JWT for checks etc.
