JWT flow updated

--- a/authentication-concepts/03.authenticationPrereqs.md
+++ b/authentication-concepts/03.authenticationPrereqs.md
@@ -55,11 +55,23 @@
           ```
           inspect -> Application -> local storage
           ````
-##
+          
+### Auhtentication vs Authorization
+- Authentication verifies who someone is, while authorization determines what they are allowed to do after authentication.
+- Essentially, authentication confirms your identity, and authorization controls your access to specific resources. 
 
-### How does Authentication works?
-#### High level answer
-1. When initially user do signin, username and password goes to backend logic
-2. password gets hashed using some hashing logic and that hashed password gets stored in DB and checks gets performed whether user exists or not
-3. if user exists backend returns JWT to local storage
-4. Next time whenever user again sends request then instead of again taking username and password, backend use JWT for checks etc.
+### How does Authentication works - signup and signin?
+#### Signup
+1. When user do signup, username and password goes to backend, username (check happens whether user exists or not) & password (gets hashed) => No Authentication happens here.
+2. Checks gets performed whether user exists or not if not exists password gets hashed using some hashing logic and that hashed password and username gets stored in DB
+#### Signin
+1. At 1st signin - user sends username and password to backend, username check and compares the hashed password in DB with the hash of input password.
+2. if above credentials are valid => creates a JWT token and retuns to frontend (usually stored in localStorage or cookies).
+3. Next time whenever user again sends request then instead of again taking username and password, Frontend sends: JWT in the Authorization: Bearer <token> header.
+4. Backend does:
+   - Verifies the JWT using the backend's secret key (no DB lookup required).
+	- If valid:
+	   - Decodes token and gets username or userId.
+	   - Proceeds to authorize or process the request.
+	- If invalid/expired:
+	   - Rejects request (401 Unauthorized).
