JWT example added

--- a/authentication-concepts/03.authenticationPrereqs.md
+++ b/authentication-concepts/03.authenticationPrereqs.md
@@ -75,3 +75,4 @@
 	   - Proceeds to authorize or process the request.
 	- If invalid/expired:
 	   - Rejects request (401 Unauthorized).
+5. Example: [DB + JWT](https://github.com/princebansal7/Web-Development-Concepts/blob/main/databases/mongoDB/02.mongoDBwithAuthenticationAndInputValidation.js)
